# repo-converter

./: CMakeLists.txt  CMakeLists.txt~  launch.sh  main.cpp  main.cpp~  options.cpp  options.h  repo-converter.kdev4  repository.cpp  repository.cpp~  repository.h  repository.h~  utils.cpp  utils.cpp~  utils.h  utils.h~  version.h
.kdev4/: _custom.kdev4  repo-converter.kdev4
